# optionalrule.github.io

./: .gitattributes  .gitignore  .post-template  CNAME  Gemfile  LICENSE  README.md  WritingSample.md  _config.yml  about.html  about.md  best-posts.md  blog.html  docker-compose.yml  index.html  popular-posts.md  test.md
_data/: best_posts.yml  blogroll.yml  categories_nav.yml  navbar.yml  socials.yml  view_counts.yml
_drafts/: 2020-12-06-dd-essentials-kit-giveaway.md  2021-01-03-dd-livestream-discussion.md  2021-03-08-1k-twitter-follower-hat-giveaway.md  2021-06-08-test-monster.md  2021-07-12-journey-rolls.md  2021-07-22-perilous-journeys-in-5e-p2.md  2021-07-25-new-post.md  2021-07-28-advantage-vs-inspiration.md  2021-08-19-the-advantage-of-knowing-modifiers.md  2023-05-17-vathirond-city-of-mad-inspiration.md  2023-05-21-spell-weaving.md  2023-05-23-monster-of-the-week.md  2023-05-28-campaign-pitch-decks.md  2023-06-25-thrilling-journies.md  2023-07-03-publish-the-shadowdark-way.md  2023-11-17-Fixing the gaps in Lost Mines of Phandelver  2024-09-23-gritty-injuries-revisiting-exhaustion-dnd-2024.md  Ethical_AI_Thread.md
_includes/: consent.html  footer_scripts.html  google_analytics.html  googlesearch.html  imageframe.html  navbar.html  navbar2.html  page_controls.html  post_preview.html  quote.html  sharelinks.html  sharepost.html  socialmedialinks.html  video_embed.html
_layouts/: default.html  home.html  (+2 more)
_scripts/llm_cataloger/: catagorize_posts.py  main.py  pyproject.toml
_scripts/pinecone_ingest/: .env_example  pinecone_post_ingest.py  pyproject.toml
(+373 files in other folders)
