[tool.poetry]
name = "pinecone-ingest"
version = "0.1.0"
description = "Script to ingest blog posts into pinecone and generate embeddings."
authors = ["Scott Turnbull <streamweaver@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pinecone-client = "^4.1.2"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
transformers = "^4.42.3"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
